Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-5930

[FlightRPC] [Python] Flight CI tests are failing

    XMLWordPrintableJSON

Details

    Description

      Flight tests segfault on Travis: https://travis-ci.org/apache/arrow/jobs/557690959

      The relevant part is:

      Fatal Python error: Aborted
      Thread 0x00007fcf009fe700 (most recent call first):
        File "/home/travis/build/apache/arrow/python/pyarrow/tests/test_flight.py", line 386 in _server_thread
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/threading.py", line 864 in run
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/threading.py", line 916 in _bootstrap_inner
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/threading.py", line 884 in _bootstrap
      Current thread 0x00007fcf1f9fa700 (most recent call first):
        File "/home/travis/build/apache/arrow/python/pyarrow/tests/test_flight.py", line 411 in flight_server
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/contextlib.py", line 99 in __exit__
        File "/home/travis/build/apache/arrow/python/pyarrow/tests/test_flight.py", line 670 in test_tls_do_get
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/_pytest/python.py", line 165 in pytest_pyfunc_call
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/callers.py", line 187 in _multicall
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/manager.py", line 81 in <lambda>
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/manager.py", line 87 in _hookexec
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/hooks.py", line 289 in __call__
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/_pytest/python.py", line 1451 in runtest
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/_pytest/runner.py", line 117 in pytest_runtest_call
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/callers.py", line 187 in _multicall
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/manager.py", line 81 in <lambda>
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/manager.py", line 87 in _hookexec
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/hooks.py", line 289 in __call__
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/_pytest/runner.py", line 192 in <lambda>
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/_pytest/runner.py", line 220 in from_call
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/_pytest/runner.py", line 192 in call_runtest_hook
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/_pytest/runner.py", line 167 in call_and_report
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/_pytest/runner.py", line 87 in runtestprotocol
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/_pytest/runner.py", line 72 in pytest_runtest_protocol
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/callers.py", line 187 in _multicall
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/manager.py", line 81 in <lambda>
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/manager.py", line 87 in _hookexec
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/hooks.py", line 289 in __call__
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/_pytest/main.py", line 278 in pytest_runtestloop
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/callers.py", line 187 in _multicall
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/manager.py", line 81 in <lambda>
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/manager.py", line 87 in _hookexec
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/hooks.py", line 289 in __call__
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/_pytest/main.py", line 257 in _main
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/_pytest/main.py", line 213 in wrap_session
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/_pytest/main.py", line 250 in pytest_cmdline_main
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/callers.py", line 187 in _multicall
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/manager.py", line 81 in <lambda>
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/manager.py", line 87 in _hookexec
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pluggy/hooks.py", line 289 in __call__
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/_pytest/config/__init__.py", line 74 in main
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/pytest.py", line 102 in <module>
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/coverage/execfile.py", line 192 in run_python_file
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/coverage/execfile.py", line 122 in run_python_module
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/coverage/cmdline.py", line 627 in do_run
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/coverage/cmdline.py", line 491 in command_line
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/lib/python3.6/site-packages/coverage/cmdline.py", line 756 in main
        File "/home/travis/build/apache/arrow/pyarrow-test-3.6/bin/coverage", line 10 in <module>
      /home/travis/build/apache/arrow/ci/travis_script_python.sh: line 202: 12032 Aborted                 (core dumped) coverage run --append -m pytest $PYARROW_PYTEST_FLAGS pyarrow/tests

      I haven't been able to reproduce this so far. We may want to just mark the tests as flaky for now.

      Attachments

        Activity

          People

            apitrou Antoine Pitrou
            lidavidm David Li
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 2h
                2h