ARROW-5930: [Python] Make Flight server init phase explicit

Should fix the sporadic crashes in test_flight.py.