python/pyarrow/includes/libarrow_flight.pxd
@@ -281,7 +281,7 @@ cdef extern from "arrow/python/flight.h" namespace "arrow::py::flight" nogil:
 
         CStatus Init(CFlightServerOptions& options)
         CStatus ServeWithSignals() except *
-        void Shutdown()
+        CStatus Shutdown()
 
     cdef cppclass PyServerAuthHandler\
             " arrow::py::flight::PyServerAuthHandler"(CServerAuthHandler):
